--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Passion+One:wght@700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap');
 
 @custom-variant dark (&:is(.dark *));
 
@@ -31,14 +31,14 @@
 
   body {
     @apply bg-background text-foreground;
-    @apply font-lato text-sm font-normal tracking-wider;
+    @apply font-poppins-base text-sm font-normal tracking-wider;
   }
 
   h1,
   h2,
   h3,
   h4 {
-    @apply font-passion-one tracking-wider;
+    @apply font-poppins-base font-bold tracking-wider;
   }
 
   h1 {
